# my-first-bio-project

./: .gitattributes  .gitignore  LICENSE  README.md  hicexp_environment.yml
3D_compartment_analysis/: .gitignore  README.md  pyproject.toml
3D_compartment_analysis/src/evr_3d_suite/: __init__.py  analysis.py  cscore.py  io_utils.py  plot3d.py  preprocessing.py
all_py/: IO.py  auto_plot_images.py  compare_cscores.py  convert_3col_to_evr.py  cscore_compare_auto.py  cscore_compare_quant.py  cscores_threshold.py  format_raw_hic.py  gene_abs_expression.py  gene_and_compartment_analysis.py  new_plot.py  plot.py  plot_animation.py  plot_cscore.py  plot_interactive_morph.py  plot_pic_gene.py  plot_showcase.py  run_analysis.py
